code-samples/example-06-route/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex06-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ex06-app
  template:
    metadata:
      labels:
        app: ex06-app
    spec:
      containers:
      - name: ex06-nginx-container
        image: nginxinc/nginx-unprivileged:stable-alpine
        volumeMounts:
        - name: wwwdata-volume
          mountPath: /usr/share/nginx/html
        ports:
        - name: http-default 
          containerPort: 8080
      volumes:
      - name: wwwdata-volume
        configMap:
          name: ex06-config
