code-samples/example-06-route/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ex06-service
spec:
  selector:
    app: ex06-app
  ports:
    - name: web
      port: 80
      targetPort: http-default
