code-samples/example-06-route/ex06a-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ex06a-route
spec:
  host: ex06a.salesdemo.ocpqa.apa.net
  path: /
  to:
    kind: Service
    name: ex06-service
  port:
    targetPort: web
